internal/xds/translator/testdata/out/xds-ir/request-id-extension.routes.yaml
- ignorePortInHostMatching: true
  name: disable-request-id-extension-listener
  virtualHosts:
  - domains:
    - '*'
    name: disable-request-id-extension-listener/*
    routes:
    - match:
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: pack-and-sample-request-id-extension-listener
  virtualHosts:
  - domains:
    - '*'
    name: pack-and-sample-request-id-extension-listener/*
    routes:
    - match:
        prefix: /
      name: fourth-route
      route:
        cluster: fourth-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: pack-request-id-extension-listener
  virtualHosts:
  - domains:
    - '*'
    name: pack-request-id-extension-listener/*
    routes:
    - match:
        prefix: /
      name: third-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: sample-request-id-extension-listener
  virtualHosts:
  - domains:
    - '*'
    name: sample-request-id-extension-listener/*
    routes:
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
